# hello_glfw

./: CMakeLists.txt  main.cpp
assets/glsl/: fragment_shader.fs
include/glad/: glad.h
src/: glad.c
src/chapter/chapter_module/: ChapterModule.cpp  ChapterModule.h
src/chapter/chapter_module/header/: chapter_module.h
src/chapter/texture/: stb_image.cpp  texture_1.cpp
src/chapter/texture/header/: texture_1.h
src/gl_helper/: GlHelper.cpp  gl_helper.cpp  gl_helper.h
src/glsl/: vertex_shader.vs
src/shader/: shader.cpp  shader.h
src/texture/: stb_image.cpp
src/window/: window.cpp  window.h
